how I set up this blog(first post)

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,17 +2,21 @@
 
 - type: github
   icon: "fab fa-github"
+  
+- type: discord
+  icon: "fab fa-discord"
+  url: "https://discord.com/users/478581065389441059"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+# - type: twitter
+#   icon: "fa-brands fa-discord"
 
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
+# - type: email
+#   icon: "fas fa-envelope"
+#   noblank: true # open link in current tab
 
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+# - type: rss
+#   icon: "fas fa-rss"
+#   noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
